kubernetes/projects/home-automation/apps/home-assistant-go2rtc/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-go2rtc
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant-go2rtc
    app.kubernetes.io/part-of: home-automation
    home-lab.io/project-slug: home-automation
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: home-assistant-go2rtc
  ports:
    - name: api
      port: 1984
      targetPort: api
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-go2rtc-webrtc
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant-go2rtc
    app.kubernetes.io/part-of: home-automation
    home-lab.io/project-slug: home-automation
  annotations:
    metallb.io/address-pool: app-services
    metallb.io/loadBalancerIPs: 192.168.3.17
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: home-assistant-go2rtc
  ports:
    - name: webrtc-tcp
      port: 8555
      targetPort: webrtc-tcp
      protocol: TCP
    - name: webrtc-udp
      port: 8555
      targetPort: webrtc-udp
      protocol: UDP
